# x264

./: .gitignore  CMakeLists.txt  build_ios.sh  build_mac.sh  configure  x264.c  x264.h  x264_ios_build.sh  x264_mac_build.sh
common/: base.c  bitstream.c  bitstream.h  cabac.h  common.h  cpu.c  dct.c  dct.h  deblock.c  frame.c  frame.h  macroblock.h  mc.c  mc.h  opencl.h  pixel.c  pixel.h  predict.c  predict.h  quant.c  quant.h  rectangle.h  set.h  threadpool.h
common/aarch64/: bitstream.h  dct.h  deblock.h  mc-c.c  mc.h  pixel.h  predict.h  quant.h
common/arm/: bitstream.h  dct.h  deblock.h  mc-c.c  mc.h  pixel.h  predict.h  quant.h
common/mips/: dct.h  deblock.h  mc.h  pixel.h  predict.h  quant.h
common/ppc/: dct.h  deblock.h  mc.c  mc.h  pixel.h  predict.h  quant.h
common/x86/: bitstream.h  dct.h  deblock.h  mc-c.c  mc.h  pixel.h  predict.h  quant.h
doc/: x264_study.md
encoder/: analyse.h  encoder.c  lookahead.c  macroblock.h  me.c  me.h  ratecontrol.h  rdo.c  set.c  set.h  slicetype-cl.c  slicetype-cl.h  slicetype.c
extras/: inttypes_x264.h
x264_debug/x264_debug.xcodeproj/: project.pbxproj
x264_debug/x264_debug.xcodeproj/xcshareddata/xcschemes/: x264_debug.xcscheme
x264_debug/x264_debug.xcodeproj/xcuserdata/chenhuiduan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
x264_debug/x264_debug.xcodeproj/xcuserdata/chenhuiduan.xcuserdatad/xcschemes/: xcschememanagement.plist
